# Virtual-Memory-Allocator

./: CMakeLists.txt  Makefile  README.md  allocator_functions.c  allocator_functions.h  command_functions.c  command_functions.h  datatype_functions.c  datatype_functions.h  lists_functions.c  lists_functions.h  lists_structs.h  main.c
